Version 1.78
-------------
Show engineer unlock blueprints green when requirements are met. (B3, C5, D1.2, D2)
Improve shutdown closing active threads before exit
Add upgrade suit and upgrade weapon event handling
Settings - Try to initialize journalfolder select to existing selection

Version 1.77
-------------
Add/replace stats for handling speed and jump assist in loadout editor - BIG CHANGES (thanks to toqueville)
Correct modifiers for handling speed and jump assist
Fix order of horizons materials
Fix odyssey shortest path excluding T3 engineers
Fix dropdowns in trade sometimes showing black text on a black background
Remove beta tag from trade
Fix notification playing before initialization finishes
Fix loadout warning showing incorrectly
Fix tooltips for odyssey blueprints in wishlist - actual newline instead of \n
QOL: singleclick add to wishlist if only 1 option is present
Hide distance for remote workshop in Horizons wishlist shortest path
Fix localizations - add missing localizations, add missing single-quotes(')

Version 1.76
-------------
Fix odyssey wishlist bug, causing application journal read failure

Version 1.75
-------------
Correct Ram Tah unlock material (Classified Scan Fragment -> Classified Scan Databanks)
Add blueprint pinning
Add Horizons Wishlist
Add rolls per grade configuration to settings
Move settings tab to generic level
Implement horizons material searchbar

Version 1.74
-------------
Set material tracking report download to weekly
Fix for launching app in a non-english locale
Update settings layout
Add more notification sounds configuration to settings
Add notification when picking something up from the wishlist
Add option to disable specific notifications

Version 1.73
-------------
Handle new journal filenaming scheme for Update 11

Version 1.72
-------------
Improve memory footprint - dynamic loading of horizons blueprints
Fix for new installs not having the appfolder yet when creating the lockfile