@@ -65,7 +65,8 @@ public enum DynamicStat implements Stat {
     FOOTSTEPS_AUDIBLE_RANGE(StatGroup.OTHER, 2),
     LOS_ANALYSIS_RANGE(StatGroup.OTHER, 3),
     LOS_ANALYSIS_TIME(StatGroup.OTHER, 4),
-    MELEE_DAMAGE(StatGroup.OTHER, 5),
+    MELEE_SHIELD_DAMAGE(StatGroup.DAMAGE, 1),
+    MELEE_HEALTH_DAMAGE(StatGroup.DAMAGE, 2),
     //weapon
     EFFECTIVE_RANGE(StatGroup.OTHER, 1),
     HIP_FIRE_ACCURACY(StatGroup.OTHER, 2),
@@ -84,19 +85,31 @@ public enum DynamicStat implements Stat {
         }
         return switch (this) {
             case DAMAGE, MODIFICATION_SLOTS -> ((LevelValue) value).getValueForLevel(level).toString();
-            case GOODS_CAPACITY, ASSETS_CAPACITY, DATA_CAPACITY -> modifications.contains(SuitModification.EXTRA_BACKPACK_CAPACITY) ? String.valueOf((Integer) value * 2) : value.toString();
-            case JUMP_ASSIST_DURATION -> NUMBER_FORMAT_0.format((modifications.contains(SuitModification.IMPROVED_JUMP_ASSIST)) ? (Integer) value * 1.33 : value) + UnitConstants.PERCENT;
-            case JUMP_ASSIST_BATTERY_CONSUMPTION -> NUMBER_FORMAT_0.format((modifications.contains(SuitModification.IMPROVED_JUMP_ASSIST)) ? (Integer) value * 0.5 : value) + UnitConstants.KILOWATT;
-            case JUMP_ASSIST_RECHARGE -> NUMBER_FORMAT_2.format((modifications.contains(SuitModification.IMPROVED_JUMP_ASSIST)) ? (Double) value * 2 / 3 : (Double) value) + UnitConstants.SECOND;
-            case HIP_FIRE_ACCURACY -> (modifications.contains(WeaponModification.HIGHER_ACCURACY_KINETIC) || modifications.contains(WeaponModification.HIGHER_ACCURACY_LASER) || modifications.contains(WeaponModification.HIGHER_ACCURACY_PLASMA) ? getHipFireAccuracy(equipment, (Double) value) : value.toString()) + UnitConstants.PERCENT;
-            case STABILITY -> (modifications.contains(WeaponModification.STABILITY) ? getStability((Double) value) : value.toString()) + UnitConstants.PERCENT;
-            case MAGAZINE_SIZE -> modifications.contains(WeaponModification.MAGAZINE_SIZE) ? String.valueOf(Math.round((Integer) value * 1.5)) : value.toString();
-            case AMMO_CAPACITY -> NUMBER_FORMAT_0.format(modifications.contains(SuitModification.EXTRA_AMMO_CAPACITY) ? (Integer) value * 1.5 : value) + UnitConstants.PERCENT;
-            case BATTERY -> NUMBER_FORMAT_2.format(modifications.contains(SuitModification.IMPROVED_BATTERY_CAPACITY) ? (Double) value * 1.5 : value) + UnitConstants.MEGAWATT;
-            case BATTERY_RECHARGE_DURATION -> NUMBER_FORMAT_1.format((Double) (modifications.contains(SuitModification.IMPROVED_BATTERY_CAPACITY) ? (Double) value * 1.5 : value) / 2.7) + UnitConstants.SECOND;
+            case GOODS_CAPACITY, ASSETS_CAPACITY, DATA_CAPACITY ->
+                    modifications.contains(SuitModification.EXTRA_BACKPACK_CAPACITY) ? String.valueOf((Integer) value * 2) : value.toString();
+            case JUMP_ASSIST_DURATION ->
+                    NUMBER_FORMAT_0.format((modifications.contains(SuitModification.IMPROVED_JUMP_ASSIST)) ? (Integer) value * 1.33 : value) + UnitConstants.PERCENT;
+            case JUMP_ASSIST_BATTERY_CONSUMPTION ->
+                    NUMBER_FORMAT_0.format((modifications.contains(SuitModification.IMPROVED_JUMP_ASSIST)) ? (Integer) value * 0.5 : value) + UnitConstants.KILOWATT;
+            case JUMP_ASSIST_RECHARGE ->
+                    NUMBER_FORMAT_2.format((modifications.contains(SuitModification.IMPROVED_JUMP_ASSIST)) ? (Double) value * 2 / 3 : (Double) value) + UnitConstants.SECOND;
+            case HIP_FIRE_ACCURACY ->
+                    (modifications.contains(WeaponModification.HIGHER_ACCURACY_KINETIC) || modifications.contains(WeaponModification.HIGHER_ACCURACY_LASER) || modifications.contains(WeaponModification.HIGHER_ACCURACY_PLASMA) ? getHipFireAccuracy(equipment, (Double) value) : value.toString()) + UnitConstants.PERCENT;
+            case STABILITY ->
+                    (modifications.contains(WeaponModification.STABILITY) ? getStability((Double) value) : value.toString()) + UnitConstants.PERCENT;
+            case MAGAZINE_SIZE ->
+                    modifications.contains(WeaponModification.MAGAZINE_SIZE) ? String.valueOf(Math.round((Integer) value * 1.5)) : value.toString();
+            case AMMO_CAPACITY ->
+                    NUMBER_FORMAT_0.format(modifications.contains(SuitModification.EXTRA_AMMO_CAPACITY) ? (Integer) value * 1.5 : value) + UnitConstants.PERCENT;
+            case BATTERY ->
+                    NUMBER_FORMAT_2.format(modifications.contains(SuitModification.IMPROVED_BATTERY_CAPACITY) ? (Double) value * 1.5 : value) + UnitConstants.MEGAWATT;
+            case BATTERY_RECHARGE_DURATION ->
+                    NUMBER_FORMAT_1.format((Double) (modifications.contains(SuitModification.IMPROVED_BATTERY_CAPACITY) ? (Double) value * 1.5 : value) / 2.7) + UnitConstants.SECOND;
             case SHIELD_STRENGTH -> ((LevelValue) value).getValueForLevel(level).toString() + UnitConstants.MEGAWATT;
-            case SHIELD_REGEN -> NUMBER_FORMAT_2.format(modifications.contains(SuitModification.FASTER_SHIELD_REGEN) ? (Double) ((LevelValue) value).getValueForLevel(level) * 1.25 : ((LevelValue) value).getValueForLevel(level)) + UnitConstants.MEGAWATT_PER_SECOND;
-            case RESERVE_AMMO -> (modifications.contains(SuitModification.EXTRA_AMMO_CAPACITY)) ? String.valueOf(Math.round((Integer) value * 1.5)) : value.toString();
+            case SHIELD_REGEN ->
+                    NUMBER_FORMAT_2.format(modifications.contains(SuitModification.FASTER_SHIELD_REGEN) ? (Double) ((LevelValue) value).getValueForLevel(level) * 1.25 : ((LevelValue) value).getValueForLevel(level)) + UnitConstants.MEGAWATT_PER_SECOND;
+            case RESERVE_AMMO ->
+                    (modifications.contains(SuitModification.EXTRA_AMMO_CAPACITY)) ? String.valueOf(Math.round((Integer) value * 1.5)) : value.toString();
             case KINETIC_RESIST, THERMAL_RESIST, PLASMA_RESIST, EXPLOSIVE_RESIST -> {
                 if (modifications.contains(SuitModification.DAMAGE_RESISTANCE)) {
                     final Integer resistance = (Integer) ((LevelValue) value).getValueForLevel(level);
@@ -106,27 +119,50 @@ public enum DynamicStat implements Stat {
                     yield ((LevelValue) value).getValueForLevel(level).toString() + UnitConstants.PERCENT;
                 }
             }
-            case EMERGENCY_AIR -> (modifications.contains(SuitModification.INCREASED_AIR_RESERVES) ? String.valueOf((Integer) value * 5) : value.toString()) + UnitConstants.SECOND;
-            case SPRINT_DURATION -> (modifications.contains(SuitModification.INCREASED_SPRINT_DURATION) ? String.valueOf((Integer) value * 2) : value.toString()) + UnitConstants.SECOND;
-            case HEADSHOT_DAMAGE -> (modifications.contains(WeaponModification.HEADSHOT_DAMAGE_KINETIC) || modifications.contains(WeaponModification.HEADSHOT_DAMAGE_LASER) || modifications.contains(WeaponModification.HEADSHOT_DAMAGE_PLASMA) ? String.valueOf(Math.round((Integer) value * 1.5)) : value) + UnitConstants.PERCENT;
-            case EFFECTIVE_RANGE -> (modifications.contains(WeaponModification.GREATER_RANGE_KINETIC) || modifications.contains(WeaponModification.GREATER_RANGE_LASER) || modifications.contains(WeaponModification.GREATER_RANGE_PLASMA) ? String.valueOf(Math.round((Integer) value * 1.5)) : value) + UnitConstants.METER;
-            case NIGHT_VISION -> (modifications.contains(SuitModification.NIGHT_VISION)) ? value + UnitConstants.KILOWATT_PER_SECOND : UTF8Constants.CHECK_FALSE;
-            case FOOTSTEPS_AUDIBLE_RANGE -> ((modifications.contains(SuitModification.QUIETER_FOOTSTEPS)) ? ((Integer) value) / 2 : ((Integer) value)) + UnitConstants.METER;
-            case SPRINT_SPEED_CARBINE_SHOTGUN, SPRINT_SPEED_RIFLE, SPRINT_SPEED_SNIPER_LAUNCHER -> NUMBER_FORMAT_2.format(modifications.contains(SuitModification.COMBAT_MOVEMENT_SPEED) ? 7.0 : value) + UnitConstants.METER_PER_SECOND;
-            case WALK_SPEED_CARBINE_SHOTGUN, WALK_SPEED_RIFLE, WALK_SPEED_SNIPER_LAUNCHER -> NUMBER_FORMAT_2.format(modifications.contains(SuitModification.COMBAT_MOVEMENT_SPEED) ? 4.0 : value) + UnitConstants.METER_PER_SECOND;
-            case ADS_SPEED_PISTOL, ADS_SPEED_CARBINE_SHOTGUN, ADS_SPEED_RIFLE, ADS_SPEED_SNIPER_LAUNCHER -> NUMBER_FORMAT_2.format(modifications.contains(SuitModification.COMBAT_MOVEMENT_SPEED) ? 4.0 : value) + UnitConstants.METER_PER_SECOND;
-            case LOS_ANALYSIS_RANGE -> (modifications.contains(SuitModification.ENHANCED_TRACKING) ? (Integer) value * 2 : value) + UnitConstants.METER;
-            case LOS_ANALYSIS_TIME -> (modifications.contains(SuitModification.ENHANCED_TRACKING) ? 0 : value) + UnitConstants.SECOND;
-            case ARCCUTTER_POWER_USAGE, GENETICSAMPLER_POWER_USAGE, PROFILESCANNER_POWER_USAGE -> NUMBER_FORMAT_2.format((modifications.contains(SuitModification.REDUCED_TOOL_BATTERY_CONSUMPTION) ? (Double) value / 2 : value)) + UnitConstants.KILOWATT_PER_SECOND;
-            case ENERGYLINK_OVERLOAD_POWER_USAGE -> NUMBER_FORMAT_2.format((modifications.contains(SuitModification.REDUCED_TOOL_BATTERY_CONSUMPTION) ? (Double) value / 2 : value)) + UnitConstants.MEGAWATT;
-            case MELEE_DAMAGE -> NUMBER_FORMAT_0.format((modifications.contains(SuitModification.ADDED_MELEE_DAMAGE)) ? (Integer) value * 2.5 : value) + UnitConstants.PERCENT;
-            case DRAW_SPEED, STOW_SPEED -> NUMBER_FORMAT_2.format(modifications.contains(WeaponModification.FASTER_HANDLING) ? getDrawStowSpeed(equipment, (Double) value) : value) + UnitConstants.SECOND;
-            case ADS_SPEED -> NUMBER_FORMAT_2.format(modifications.contains(WeaponModification.FASTER_HANDLING) ? getADSSpeed(equipment, (Double) value) : value) + UnitConstants.SECOND;
-            case SILENCED_INSIDE -> (modifications.contains(WeaponModification.NOISE_SUPPRESSOR) || (boolean) value) ? UTF8Constants.CHECK_TRUE : UTF8Constants.CHECK_FALSE;
-            case SILENCED_OUTSIDE -> (modifications.contains(WeaponModification.AUDIO_MASKING) || (boolean) value) ? UTF8Constants.CHECK_TRUE : UTF8Constants.CHECK_FALSE;
-            case RELOAD_SPEED -> ((modifications.contains(WeaponModification.RELOAD_SPEED)) ? NUMBER_FORMAT_2.format((Double) value / (equipment.equals(Weapon.TAKADA_APHELION) ? 1.20 : 1.25)) : value) + UnitConstants.SECOND;
-            case SCOPE -> (modifications.contains(WeaponModification.SCOPE) || (boolean) value) ? UTF8Constants.CHECK_TRUE : UTF8Constants.CHECK_FALSE;
-            case STOWED_RELOADING -> (modifications.contains(WeaponModification.STOWED_RELOADING) || (boolean) value) ? UTF8Constants.CHECK_TRUE : UTF8Constants.CHECK_FALSE;
+            case EMERGENCY_AIR ->
+                    (modifications.contains(SuitModification.INCREASED_AIR_RESERVES) ? String.valueOf((Integer) value * 5) : value.toString()) + UnitConstants.SECOND;
+            case SPRINT_DURATION ->
+                    (modifications.contains(SuitModification.INCREASED_SPRINT_DURATION) ? String.valueOf((Integer) value * 2) : value.toString()) + UnitConstants.SECOND;
+            case HEADSHOT_DAMAGE ->
+                    (modifications.contains(WeaponModification.HEADSHOT_DAMAGE_KINETIC) || modifications.contains(WeaponModification.HEADSHOT_DAMAGE_LASER) || modifications.contains(WeaponModification.HEADSHOT_DAMAGE_PLASMA) ? String.valueOf(Math.round((Integer) value * 1.5)) : value) + UnitConstants.PERCENT;
+            case EFFECTIVE_RANGE ->
+                    (modifications.contains(WeaponModification.GREATER_RANGE_KINETIC) || modifications.contains(WeaponModification.GREATER_RANGE_LASER) || modifications.contains(WeaponModification.GREATER_RANGE_PLASMA) ? String.valueOf(Math.round((Integer) value * 1.5)) : value) + UnitConstants.METER;
+            case NIGHT_VISION ->
+                    (modifications.contains(SuitModification.NIGHT_VISION)) ? value + UnitConstants.KILOWATT_PER_SECOND : UTF8Constants.CHECK_FALSE;
+            case FOOTSTEPS_AUDIBLE_RANGE ->
+                    ((modifications.contains(SuitModification.QUIETER_FOOTSTEPS)) ? ((Integer) value) / 2 : ((Integer) value)) + UnitConstants.METER;
+            case SPRINT_SPEED_CARBINE_SHOTGUN, SPRINT_SPEED_RIFLE, SPRINT_SPEED_SNIPER_LAUNCHER ->
+                    NUMBER_FORMAT_2.format(modifications.contains(SuitModification.COMBAT_MOVEMENT_SPEED) ? 7.0 : value) + UnitConstants.METER_PER_SECOND;
+            case WALK_SPEED_CARBINE_SHOTGUN, WALK_SPEED_RIFLE, WALK_SPEED_SNIPER_LAUNCHER ->
+                    NUMBER_FORMAT_2.format(modifications.contains(SuitModification.COMBAT_MOVEMENT_SPEED) ? 4.0 : value) + UnitConstants.METER_PER_SECOND;
+            case ADS_SPEED_PISTOL, ADS_SPEED_CARBINE_SHOTGUN, ADS_SPEED_RIFLE, ADS_SPEED_SNIPER_LAUNCHER ->
+                    NUMBER_FORMAT_2.format(modifications.contains(SuitModification.COMBAT_MOVEMENT_SPEED) ? 4.0 : value) + UnitConstants.METER_PER_SECOND;
+            case LOS_ANALYSIS_RANGE ->
+                    (modifications.contains(SuitModification.ENHANCED_TRACKING) ? (Integer) value * 2 : value) + UnitConstants.METER;
+            case LOS_ANALYSIS_TIME ->
+                    (modifications.contains(SuitModification.ENHANCED_TRACKING) ? 0 : value) + UnitConstants.SECOND;
+            case ARCCUTTER_POWER_USAGE, GENETICSAMPLER_POWER_USAGE, PROFILESCANNER_POWER_USAGE ->
+                    NUMBER_FORMAT_2.format((modifications.contains(SuitModification.REDUCED_TOOL_BATTERY_CONSUMPTION) ? (Double) value / 2 : value)) + UnitConstants.KILOWATT_PER_SECOND;
+            case ENERGYLINK_OVERLOAD_POWER_USAGE ->
+                    NUMBER_FORMAT_2.format((modifications.contains(SuitModification.REDUCED_TOOL_BATTERY_CONSUMPTION) ? (Double) value / 2 : value)) + UnitConstants.MEGAWATT;
+            case MELEE_SHIELD_DAMAGE ->
+                    NUMBER_FORMAT_0.format((modifications.contains(SuitModification.ADDED_MELEE_DAMAGE)) ? (Integer) value * 2.5 : value) + UnitConstants.MEGAWATT;
+            case MELEE_HEALTH_DAMAGE ->
+                    NUMBER_FORMAT_0.format((modifications.contains(SuitModification.ADDED_MELEE_DAMAGE)) ? (Integer) value * 2.5 : value) + UnitConstants.HP;
+            case DRAW_SPEED, STOW_SPEED ->
+                    NUMBER_FORMAT_2.format(modifications.contains(WeaponModification.FASTER_HANDLING) ? getDrawStowSpeed(equipment, (Double) value) : value) + UnitConstants.SECOND;
+            case ADS_SPEED ->
+                    NUMBER_FORMAT_2.format(modifications.contains(WeaponModification.FASTER_HANDLING) ? getADSSpeed(equipment, (Double) value) : value) + UnitConstants.SECOND;
+            case SILENCED_INSIDE ->
+                    (modifications.contains(WeaponModification.NOISE_SUPPRESSOR) || (boolean) value) ? UTF8Constants.CHECK_TRUE : UTF8Constants.CHECK_FALSE;
+            case SILENCED_OUTSIDE ->
+                    (modifications.contains(WeaponModification.AUDIO_MASKING) || (boolean) value) ? UTF8Constants.CHECK_TRUE : UTF8Constants.CHECK_FALSE;
+            case RELOAD_SPEED ->
+                    ((modifications.contains(WeaponModification.RELOAD_SPEED)) ? NUMBER_FORMAT_2.format((Double) value / (equipment.equals(Weapon.TAKADA_APHELION) ? 1.20 : 1.25)) : value) + UnitConstants.SECOND;
+            case SCOPE ->
+                    (modifications.contains(WeaponModification.SCOPE) || (boolean) value) ? UTF8Constants.CHECK_TRUE : UTF8Constants.CHECK_FALSE;
+            case STOWED_RELOADING ->
+                    (modifications.contains(WeaponModification.STOWED_RELOADING) || (boolean) value) ? UTF8Constants.CHECK_TRUE : UTF8Constants.CHECK_FALSE;
         };
     }
 
